unauthenticated functionality handled

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Clone</title>
+    <link rel="shortcut icon" href="https://www.youtube.com/s/desktop/050e6796/img/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -162,7 +163,7 @@
                                     <h2 class="md:block hidden">History</h2>
                                 </div>
                             </a>
-                            <a href="/studio">
+                            <a href="/studio" target="_blank" title="YouTube Studio">
                                 <div class="flex hover:bg-zinc-200 items-center rounded-lg gap-6 py-1.5 px-2">
                                     <i class="ri-video-line text-xl"></i>
                                     <h2 class="md:block hidden">Your Videos</h2>
