--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -102,7 +102,7 @@
         </div>
         <div class="bottom w-full h-[91vh] flex relative">
             <%if(leftSection ){%>
-                <div class="left h-full overflow-y-auto md:w-60 w-10 shrink-0 py-1 border-b-1">
+                <div class="left h-full overflow-y-auto w-max lg:w-60 shrink-0 py-1 border-b-1">
                     <div class="border-b-[1px] px-3 py-2">
                         <a href="/">
                             <div class="flex hover:bg-zinc-200 items-center rounded-lg gap-6 py-1.5 px-2 bg-zinc-200">
