--- a/views/studio.ejs
+++ b/views/studio.ejs
@@ -109,8 +109,7 @@
             <div class="right w-[83vw] overflow-y-auto">
                 <h1 class="text-2xl font-medium p-5">Channel content</h1>
                 <div class="category px-5 border-b border-b-zinc-200 w-full mt-5 flex gap-5 items-center">
-                    <a href="/"><h1
-                        class="font-semibold cursor-pointer text-md py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-transparent">
+                    <a href="/"><h1 class="font-semibold border-b-zinc-900 cursor-pointer text-md py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-transparent">
                         Home</h1></a>
                     <h1 onclick="showAll(this,'video')" class="font-semibold cursor-pointer text-md py-2 border-b w-fit border-b-2 px-1 hover:border-b-zinc-900 border-b-transparent">
                         Videos</h1>
@@ -132,8 +131,18 @@
                                     </h1>
                                     <div class="video-desc flex gap-5">
     
+                                        <%if(video.type){%>
+
                                         <a  href="/video/<%=video._id%>"
                                             class="cursor-pointer border flex justify-center w-40 aspect-video h-max rounded-xl bg-zinc-900 mb-2 relative overflow-hidden">
+                                            <%}else{%>
+                                                <a  href="/playlist/<%=video._id%>"
+                                                    class="cursor-pointer border flex justify-center w-40 aspect-video h-max rounded-xl bg-zinc-500 mb-2 relative">
+                                                    <div class="h-full w-[96%] rounded-xl -top-2 z-[-1] absolute left-1/2 -translate-x-1/2 bg-zinc-300 ">
+                                                    </div>
+                                                    <div class="h-full w-[98%] rounded-xl -top-1 z-[-1] absolute left-1/2 -translate-x-1/2 bg-zinc-400 ">
+                                                    </div>
+                                            <%}%>
                                             <video class="h-full" muted  controlsList="nodownload" src="/uploads/videos/<%=video.videoName%>"></video>
                                             <%if(video.thumbnail){%>
                                                 <div
@@ -485,29 +494,77 @@
                 console.log(response.data)
                 btn.parentNode.parentNode.querySelector('.filter .filteredVideo').innerHTML=''
                 response.data.forEach((video,i)=>{
-                    btn.parentNode.parentNode.querySelector('.filter .filteredVideo').innerHTML+=`
-                <div class="video relative border-b py-3 flex justify-between">
-                    <div class="flex gap-24">
-                            <h1>${i+1}</h1>
-                        <div class="video-desc flex gap-5">
-                            <a href="/${type === 'playlist'?'playlist':'video'}/${video._id}" class="cursor-pointer border flex justify-center w-40 aspect-video h-max rounded-xl bg-zinc-900 mb-2 relative overflow-hidden">
-                            <video class="h-full bg-zinc-400" muted  controlsList="nodownload" src=""></video>
-                            </a>
-                            <div class="description w-[13vw]">
-                                <h1 class="font-medium truncate leading-tight">
-                                ${video.title}
+                    
+                    if(video.type==='short'||video.type==='video'){
+                        btn.parentNode.parentNode.querySelector('.filter .filteredVideo').innerHTML+=`
+                        <div class="video relative border-b py-3 flex justify-between">
+                                <div class="flex gap-24">
+
+                                    <h1>
+                                        ${i+1}
+                                    </h1>
+                                    <div class="video-desc flex gap-5">
+                                        <a  href="/video/${video._id}"
+                                            class="cursor-pointer border flex justify-center w-40 aspect-video h-max rounded-xl bg-zinc-900 mb-2 relative overflow-hidden">
+                                            <video class="h-full bg-zinc-600" muted  controlsList="nodownload" src=""></video>
+                                            </a>
+    
+                                        <div class="description w-[13vw]">
+                                            <h1 class="font-medium truncate leading-tight">
+                                                ${video.title}
+                                            </h1>
+                                            <p class="text-sm text-zinc-400">
+                                                ${video.description.slice(0,70)+" ..."}
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <h1>${new Date(video.createdDate).toLocaleDateString('en-US', { month: 'long', day: '2-digit', year: 'numeric' })}</h1>
+                                <h1>
+                                    ${video.likes.length} likes
                                 </h1>
-                                <p class="text-sm text-zinc-400">
-                                ${video.description.length>70 ? video.description.slice(0,70)+" ..." :video.description }
-                                </p>
+                                <h1>
+                                    ${video.comments.length} comments
+                                </h1>
+                                <a href="/video/delete/${video._id}"><i
+                                        class="rounded-b-md hover:bg-zinc-100 cursor-pointer py-.5 px-2 text-zinc-700 bg-zinc-200 ri-delete-bin-2-line absolute bottom-4 right-1"></i></a>
+                                <i onclick="editBtnClickHandle('${video._id}','${video.title}','${video.description}','${video.thumbnail}','${video.videoName}')"
+                                    class="rounded-t-md hover:bg-zinc-100 cursor-pointer py-.5 px-2 text-zinc-700 bg-zinc-200 ri-edit-line absolute bottom-10 right-1"></i>
+                            </div>
+                                `
+                    }else{
+
+                        btn.parentNode.parentNode.querySelector('.filter .filteredVideo').innerHTML+=`
+    
+                    <div class="video relative border-b py-3 flex justify-between">
+                        
+                        <div class="flex gap-24">
+                                <h1>${i+1}</h1>
+                            <div class="video-desc flex gap-5">
+                                <a href="/${type === 'playlist'?'playlist':'video'}/${video._id}" class="cursor-pointer border flex justify-center w-40 aspect-video h-full rounded-xl bg-zinc-900 mb-2 relative">
+                                    <div class="h-full w-[96%] rounded-xl -top-2 z-[-1] absolute left-1/2 -translate-x-1/2 bg-zinc-300 ">
+                                </div>
+                                <div class="h-full w-[98%] rounded-xl -top-1 z-[-1] absolute left-1/2 -translate-x-1/2 bg-zinc-400 ">
+                                </div>
+                                <video class="h-full" muted  controlsList="nodownload" src="">
+                                    </video>
+                                </a>
+                                <div class="description w-[13vw]">
+                                    <h1 class="font-medium truncate leading-tight">
+                                    ${video.title}
+                                    </h1>
+                                    <p class="text-sm text-zinc-400">
+                                    ${video.description.length>70 ? video.description.slice(0,70)+" ..." :video.description }
+                                    </p>
+                                </div>
                             </div>
                         </div>
+                        <h1>${ new Date(video.createdDate).toLocaleDateString('en-US', { month: 'long', day: '2-digit', year: 'numeric' })}</h1>
+                        <h1>0 likes</h1>
                     </div>
-                    <h1>${ new Date(video.createdDate).toLocaleDateString('en-US', { month: 'long', day: '2-digit', year: 'numeric' })}</h1>
-                    <h1>0 likes</h1>
-                </div>
-                    `
-                    
+                        `
+                        
+                    }
                 })
             })
         }
